--- a/index.html
+++ b/index.html
@@ -1,13 +1,216 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Electronics Hub</title>
+  <style>
+    /* Basic Reset & Styling */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+    }
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 1em;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    header .logo {
+      font-size: 1.5em;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 0.5em;
+      text-decoration: none;
+    }
+    .hero {
+      background: url('electronics-banner.jpg') no-repeat center center/cover;
+      height: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+    }
+    .hero h1 {
+      color: #fff;
+      font-size: 3em;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 0.5em;
+    }
+    .products, .recommendations .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1em;
+      padding: 1em;
+    }
+    .product-card {
+      background: #fff;
+      padding: 1em;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      text-align: center;
+    }
+    .recommendations {
+      padding: 1em;
+      background: #eee;
+      margin: 1em;
+      border-radius: 5px;
+    }
+    /* Chatbot Styles */
+    .chatbot {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 300px;
+      height: 400px;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      display: none;
+      flex-direction: column;
+    }
+    .chatbot-header {
+      background: #333;
+      color: #fff;
+      padding: 0.5em;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .chatbot-body {
+      flex: 1;
+      padding: 0.5em;
+      overflow-y: auto;
+    }
+    .chatbot-input {
+      padding: 0.5em;
+      border-top: 1px solid #ccc;
+    }
+    .chatbot-toggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #333;
+      color: #fff;
+      padding: 0.5em 1em;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <div class="logo">Electronics Hub</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Products</a>
+      <a href="#">Deals</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Welcome to Electronics Hub</h1>
+  </section>
+
+  <!-- Product Listings -->
+  <section class="products">
+    <div class="product-card">
+      <img src="laptop.jpg" alt="Laptop" width="100%">
+      <h2>Laptop</h2>
+      <p>$999</p>
+    </div>
+    <div class="product-card">
+      <img src="smartphone.jpg" alt="Smartphone" width="100%">
+      <h2>Smartphone</h2>
+      <p>$699</p>
+    </div>
+    <div class="product-card">
+      <img src="tablet.jpg" alt="Tablet" width="100%">
+      <h2>Tablet</h2>
+      <p>$499</p>
+    </div>
+    <!-- Add more product cards as needed -->
+  </section>
+
+  <!-- Auto-Recommendations Section -->
+  <section class="recommendations">
+    <h2>Recommended for You</h2>
+    <p>Based on your browsing history, you might like these products.</p>
+    <div class="products">
+      <div class="product-card">
+        <img src="headphones.jpg" alt="Headphones" width="100%">
+        <h2>Headphones</h2>
+        <p>$199</p>
+      </div>
+      <div class="product-card">
+        <img src="smartwatch.jpg" alt="Smartwatch" width="100%">
+        <h2>Smartwatch</h2>
+        <p>$299</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Chatbot -->
+  <div class="chatbot" id="chatbot">
+    <div class="chatbot-header">
+      <span>Chatbot</span>
+      <button id="closeChat" style="background: none; border: none; color: #fff; cursor: pointer;">X</button>
+    </div>
+    <div class="chatbot-body" id="chatbotBody">
+      <p>Hi! How can I help you today?</p>
+    </div>
+    <div class="chatbot-input">
+      <input type="text" id="chatInput" placeholder="Type your message..." style="width:80%;">
+      <button id="sendChat">Send</button>
+    </div>
+  </div>
+  <button class="chatbot-toggle" id="toggleChat">Chat</button>
+
+  <script>
+    // Chatbot functionality
+    const chatbot = document.getElementById('chatbot');
+    const toggleChat = document.getElementById('toggleChat');
+    const closeChat = document.getElementById('closeChat');
+    const sendChat = document.getElementById('sendChat');
+    const chatInput = document.getElementById('chatInput');
+    const chatbotBody = document.getElementById('chatbotBody');
+
+    toggleChat.addEventListener('click', () => {
+      chatbot.style.display = 'flex';
+      toggleChat.style.display = 'none';
+    });
+
+    closeChat.addEventListener('click', () => {
+      chatbot.style.display = 'none';
+      toggleChat.style.display = 'block';
+    });
+
+    sendChat.addEventListener('click', () => {
+      const msg = chatInput.value.trim();
+      if (msg) {
+        // Append user message
+        const userMsg = document.createElement('p');
+        userMsg.textContent = "You: " + msg;
+        chatbotBody.appendChild(userMsg);
+        chatInput.value = '';
+        // Simulate bot response after a delay
+        setTimeout(() => {
+          const botMsg = document.createElement('p');
+          botMsg.textContent = "Bot: This is a placeholder response.";
+          chatbotBody.appendChild(botMsg);
+          chatbotBody.scrollTop = chatbotBody.scrollHeight;
+        }, 1000);
+      }
+    });
+  </script>
+</body>
 </html>
